<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    android:text="@string/welcome"
                    android:textAppearance="?attr/textAppearanceHeadline2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewWelcome"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logo"
                    app:civ_border_color="@color/border_color"
                    app:civ_border_width="1dp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal|center_vertical"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/label_postal_code_verify"
                        android:textAppearance="?attr/textAppearanceHeadline3" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default">

                        <EditText
                            android:id="@+id/editTextPostalCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnVerify"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/action_verify"
                        app:icon="@drawable/ic_baseline_location_on_24"
                        app:iconGravity="textStart" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGoBack"
                        style="@style/ButtonStyleSecondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/action_go_back"
                        app:icon="@drawable/ic_baseline_arrow_back_24"
                        app:iconGravity="textStart"
                        app:iconTint="@color/muted" />



                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/linearLayoutGps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewPermission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/permission_location"
                        android:textAppearance="?attr/textAppearanceHeadline2" />

                    <TextView
                        android:id="@+id/textViewDiscovery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/info_permission_location"
                        android:textAppearance="?attr/textAppearanceHeadline3" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnPermision"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/action_permission"
                        app:icon="@drawable/ic_baseline_thumb_up_24"
                        app:iconGravity="textStart" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnJump"
                        style="@style/ButtonStyleSecondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_default"
                        android:text="@string/action_not_permission"
                        app:icon="@drawable/ic_baseline_location_on_24"
                        app:iconGravity="textStart"
                        app:iconTint="@color/muted" />



                </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
